--- a/index.html
+++ b/index.html
@@ -4,8 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year Portfolio</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <div class="header-container">
+            <h4>Happy New Year</h4>
+            <h3>New Year Party Celebration</h3>
+        </div>
+    </header>
+    <main>
+        <section>
+            <div class="offer">
+                <h3 class="offer-percent">65% OFF</h3>
+                <h4 class="holiday-deal">OUR HOLIDAY DEALS ARE BETTER</h4>
+                <h3 class="catagoti">ALL CATEGORIES</h3>
+                <img src="images/New Year Photo.png" alt="">
+            </div>
+        </section>
+        <section>
+            <div class="section-container">
+                <div class="victory">
+                    <div class="victory-details">
+                        <h3 class="victory-title">Welcome to midnight party</h3>
+                        <p class="victory-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                        <button class="join">JOIN NOW</button>
+                    </div>
+                    <div >
+                        <img src="images/Group 70.png" alt="" class="new-year">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
