--- a/index.html
+++ b/index.html
@@ -39,6 +39,25 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="hotel">
+                <div class="hotel-details">
+                    <h4><span>Place:</span> New Park Hotel</h4>
+                    <h4><span>Date:</span> 31 December Night 2023</h4>
+                    <h4><span>Time:</span> Evening 7.30 pm to 12.30 am</h4>
+                    <button class="join-now">JOIN NOW</button>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="upcoming-offer">
+                <div>
+                    
+                </div>
+                <div></div>
+                <div></div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
