--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>New Year Portfolio</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Merriweather+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -51,11 +51,21 @@
         </section>
         <section>
             <div class="upcoming-offer">
-                <div>
-                    
+                <div class="offer-details">
+                    <h4 class="offer-title">NEW BEST OFFER</h4>
+                    <h3 class="coming-soon">Coming Soon</h3>
+                    <p class="offer-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
                 </div>
-                <div></div>
-                <div></div>
+                <div>
+                    <div class="circle">
+                        <img src="images/Ellipse 1.png" alt="" class="circle-image">
+                    </div>
+                </div>
+                <div>
+                    <h3 class="year">2024</h3>
+                    <p class="year-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                    <img src="images/Group 96.png" alt="">
+                </div>
             </div>
         </section>
     </main>
