--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <img src="images/Ellipse 1.png" alt="" class="circle-image">
                     </div>
                 </div>
-                <div>
+                <div id="year-title">
                     <h3 class="year">2024</h3>
                     <p class="year-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
                     <img src="images/Group 96.png" alt="">
