add holyday offer

--- a/index.html
+++ b/index.html
@@ -68,6 +68,23 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="holyday-container">
+                <div class="holyday">
+                    <h6 class="holyday-func">WHAT IS FUNCTIONAL</h6>
+                    <h3><span>Holidays</span> Sale 50%</h3>
+                    <p class="holyday-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.
+                    </p>
+                    <img src="images/Group 44.png" alt="" class="discount-perc">
+                    <!-- <img src="images/Rectangle 1.png" alt="" class="human"> -->
+                    <img src="images/Group 75.png" alt="" class="gift-box">
+                    <!-- <div class="rectangle">
+                        
+                    </div> -->
+                </div>
+            </div>
+            
+        </section>
     </main>
 </body>
 </html>
