--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <p class="letter-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
                 <div class="input-form">
                     <input type="email" name="email" id="email" placeholder="user@gmail.com">
-                    <button class="subscribe"></button>
+                    <button class="subscribe">Subsceibe</button>
                 </div>
                 
             </div>
