add footer section

--- a/index.html
+++ b/index.html
@@ -114,5 +114,29 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="contact-address">
+            <div class="address">
+                <h4 class="house-number">44, Big Building Roosevelt Street</h4>
+                <h4 class="location">Beach Gardens Florida 33410</h4>
+            </div>
+            <div class="contact-num">
+                <h4 class="phone">+00 123 584 124</h4>
+                <h4 class="website">www.website.com</h4>
+            </div>
+        </div>
+        <hr>
+        <div class="social">
+            <a href="#"><img src="images/Facebook.png" alt=""></a>
+            <a href="#"><img src="images/Instagram.png" alt=""></a>
+            <a href="#"><img src="images/Twitter.png" alt=""></a>
+            <a href="#"><img src="images/Linkedin.png" alt=""></a>
+        </div>
+        <hr>
+        <div class="last">
+            <p class="copy-right">2017, All Rights Reserved.</p>
+            <p class="unsubscribe">Unsubscribe</p>
+        </div>
+    </footer>
 </body>
 </html>
