--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&family=Merriweather+Sans&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -121,8 +124,8 @@
                 <h4 class="location">Beach Gardens Florida 33410</h4>
             </div>
             <div class="contact-num">
-                <h4 class="phone">+00 123 584 124</h4>
-                <h4 class="website">www.website.com</h4>
+                <h4 class="phone"><i class="fa-solid fa-phone-volume"></i> +00 123 584 124</h4>
+                <h4 class="website"> <i class="fa-solid fa-globe"></i> www.website.com</h4>
             </div>
         </div>
         <hr>
